--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,96 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .App {
+  height: 100vh;
+  background-color: cornflowerblue;
+}
+#wrapper {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+  padding-top: 100px;
+}
+
+h2 {
+  font-size: 50px;
+  font-weight: 900;
+  color: black;
+}
+
+.session-break-label {
+  display: flex;
+  flex-direction: row;
+  margin: 20px 30px;
+  width: 100vw;
+  justify-content: space-evenly;
+  font-weight: 500;
+  font-size: 25px;
+}
+
+.break,
+.session {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+button,
+strong {
+  font-size: 30px;
+  width: 40px;
+  margin: 5px auto;
+  border: none;
+  border-radius: 10px;
+}
+
+.timer-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  flex-direction: column;
+}
+
+.timer-wrapper > button {
+  width: fit-content;
+  padding: 5px;
+  display: inline;
+}
+
+.timer {
+  width: 250px;
+  height: 150px;
+  border: 2px solid #777;
+  border-radius: 10px;
+  margin-bottom: 20px;
+}
+
+.session {
+  font-size: 30px;
+  font-weight: 500;
+  padding: 10px;
+}
+
+.time {
+  font-size: 60px;
+  font-weight: 500;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.author {
+  text-align: center;
+  font-family: Share Tech Mono, sans;
+  margin-top: 15px;
+  font-size: 14px;
+  color: #a50d0d;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.author > a {
+  text-decoration: none;
+  color: #00264d;
+  line-height: 26px;
 }
